fix: fix pagination color and gaps + slider styles

--- a/src/components/materials-item/materials-item.module.css
+++ b/src/components/materials-item/materials-item.module.css
@@ -50,6 +50,11 @@
     padding: 24px 12px 16px;
   }
 }
+@media screen and (max-width: 767px){
+  .card__link{
+    padding-top: 35px;
+  }
+}
 .card__tag {
   position: absolute;
   top: -16px;
@@ -144,6 +149,7 @@
   .card__image {
     width: 160px;
     height: 180px;
+    margin-top: 0;
   }
 }
 
